--- a/[Local] Navigation.ipynb
+++ b/[Local] Navigation.ipynb
@@ -343,7 +343,8 @@
       "Training to be started... Steps: 300 new reward max: 1.0\n",
       "new reward min: -1.0\n",
       "Training to be started... Steps: 11100 new reward min: -2.0\n",
-      "Training to be started... Steps: 66600 "
+      "Training to be started... Steps: 99900 training starts!                            \n",
+      "Episode: 33\tAverage Score: 0.42"
      ]
     }
    ],
