--- a/[Local] Navigation.ipynb
+++ b/[Local] Navigation.ipynb
@@ -275,16 +275,17 @@
       "use double network: False\n",
       "use reward scaling: False\n",
       "use error clipping: False\n",
-      "buffer size: 100000\n",
+      "buffer size: 200000\n",
       "batch size: 64\n",
       "learning rate: 0.001\n",
-      "min replay size: 100000\n",
+      "min replay size: 200000\n",
       "target network update: 4\n",
       "optimizer: Adam (\n",
       "Parameter Group 0\n",
       "    amsgrad: False\n",
       "    betas: (0.9, 0.999)\n",
       "    eps: 1e-08\n",
+      "    initial_lr: 0.001\n",
       "    lr: 0.001\n",
       "    weight_decay: 0\n",
       ")\n"
@@ -338,13 +339,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new reward max: 0.0\n",
-      "new reward min: 0.0\n",
-      "Training to be started... Steps: 300 new reward max: 1.0\n",
-      "new reward min: -1.0\n",
-      "Training to be started... Steps: 11100 new reward min: -2.0\n",
-      "Training to be started... Steps: 99900 training starts!                            \n",
-      "Episode: 33\tAverage Score: 0.42"
+      "Training to be started... Steps: 199800 training starts!                            \n",
+      "Episode: 53\tAverage Score: 0.369"
      ]
     }
    ],
@@ -373,9 +369,6 @@
     "    \n",
     "    eps_decay=0.999                    # make sure decay come to min \n",
     "    \n",
-    "    max_r = -np.inf\n",
-    "    min_r = np.inf\n",
-    "    \n",
     "    i_episode = 1\n",
     "    \n",
     "    while i_episode < n_episodes + 1:\n",
@@ -391,15 +384,7 @@
     "            next_state = env_info.vector_observations[0]      # get the next state\n",
     "            reward = env_info.rewards[0]                      # get the reward\n",
     "            done = env_info.local_done[0]                     # get done status\n",
-    "            \n",
-    "            if reward > max_r:\n",
-    "                max_r = reward\n",
-    "                print(\"new reward max: {}\".format(max_r))\n",
-    "            if reward < min_r:\n",
-    "                min_r = reward\n",
-    "                print(\"new reward min: {}\".format(min_r))            \n",
-    "            \n",
-    "            #agent_unity.step(state, action, reward, next_state, done) # agent update steps info and learn from sample\n",
+    "\n",
     "            agent_unity.step(state , action, reward, next_state, done, (i_episode,n_episodes))\n",
     "            \n",
     "            state = next_state\n",
@@ -414,12 +399,16 @@
     "            eps = max(eps_end, eps_decay*eps) # decay epsilon\n",
     "            print('\\rEpisode: {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
     "            if i_episode % 100 == 0:\n",
+    "                \n",
+    "                latest_lr = agent_unity.optimizer.state_dict()['param_groups'][0]['lr']\n",
+    "\n",
     "                #print('\\rEpisode: {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
-    "                print(('\\rEpisode: {}\\tAverage Score: {:.2f}\\tsteps: {}\\teps: {:.2f}'\n",
-    "                       '\\tp: {:.3f}  b: {:.3f}').format(i_episode, np.mean(scores_window),\n",
-    "                                                                     agent_unity.t_step, eps, \n",
+    "                print(('\\rEpisode: {}\\tAverage Score: {:.2f}\\tsteps: {}   eps: {:.2f}'\n",
+    "                       '\\tlr: {:1.2e}\\tp: {:.3f}  b: {:.3f}').format(i_episode, np.mean(scores_window),\n",
+    "                                                                     agent_unity.t_step, eps, latest_lr, \n",
     "                                                                     agent_unity.p_replay_alpha, \n",
-    "                                                                     agent_unity.p_replay_beta, end=\"\")) \n",
+    "                                                                     agent_unity.p_replay_beta, end=\"\"))\n",
+    "                \n",
     "                torch.save(state_dicts, model_dir+model_name)\n",
     "\n",
     "            if np.mean(scores_window)>=13.0:\n",
@@ -435,7 +424,7 @@
     "\n",
     "    return scores\n",
     "\n",
-    "scores = dqn_unity(3000)"
+    "scores = dqn_unity(2000)"
    ]
   },
   {
@@ -459,7 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent_unity.memory.tree.tree[999]"
+    "#env.close()"
    ]
   },
   {
@@ -468,31 +457,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent_unity.memory.tree.data[0].td_error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Saving the model\n",
-    "model_dir = 'saved_models/'\n",
-    "model_name = 'unity_linear_navigation.pt'\n",
-    "\n",
-    "# after training, save your model parameters in the dir 'saved_models'\n",
-    "state_dicts = {'model': agent_unity.qnetwork_local.state_dict(), \n",
-    "               'optimizer': agent_unity.optimizer.state_dict()}\n",
     "torch.save(state_dicts, model_dir+model_name)"
    ]
   },
