updated, use a bigger LR

--- a/[Local] Navigation.ipynb
+++ b/[Local] Navigation.ipynb
@@ -277,7 +277,7 @@
       "use error clipping: False\n",
       "buffer size: 200000\n",
       "batch size: 64\n",
-      "learning rate: 0.001\n",
+      "learning rate: 0.005\n",
       "min replay size: 200000\n",
       "target network update: 4\n",
       "optimizer: Adam (\n",
@@ -285,8 +285,8 @@
       "    amsgrad: False\n",
       "    betas: (0.9, 0.999)\n",
       "    eps: 1e-08\n",
-      "    initial_lr: 0.001\n",
-      "    lr: 0.001\n",
+      "    initial_lr: 0.005\n",
+      "    lr: 0.005\n",
       "    weight_decay: 0\n",
       ")\n"
      ]
@@ -339,8 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training to be started... Steps: 199800 training starts!                            \n",
-      "Episode: 53\tAverage Score: 0.369"
+      "Training to be started... Steps: 41700 "
      ]
     }
    ],
