this version seems to work pretty well. b increase to 1 even before end of training.  added print params functions

--- a/[Local] Navigation.ipynb
+++ b/[Local] Navigation.ipynb
@@ -275,18 +275,19 @@
       "use double network: False\n",
       "use reward scaling: False\n",
       "use error clipping: False\n",
-      "buffer size: 200000\n",
+      "buffer size: 100000\n",
       "batch size: 64\n",
-      "learning rate: 0.005\n",
-      "min replay size: 200000\n",
-      "target network update: 4\n",
+      "initial learning rate: 0.0001\n",
+      "learing rate decay: True\n",
+      "min replay size: 100000\n",
+      "target network update: 16\n",
       "optimizer: Adam (\n",
       "Parameter Group 0\n",
       "    amsgrad: False\n",
       "    betas: (0.9, 0.999)\n",
       "    eps: 1e-08\n",
-      "    initial_lr: 0.005\n",
-      "    lr: 0.005\n",
+      "    initial_lr: 0.0001\n",
+      "    lr: 0.0001\n",
       "    weight_decay: 0\n",
       ")\n"
      ]
@@ -339,7 +340,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training to be started... Steps: 41700 "
+      "Training to be started... Steps: 99900 current device: cpu\n",
+      "use duel network (a and v): False\n",
+      "use double network: False\n",
+      "use reward scaling: False\n",
+      "use error clipping: False\n",
+      "buffer size: 100000\n",
+      "batch size: 64\n",
+      "initial learning rate: 0.0001\n",
+      "learing rate decay: True\n",
+      "min replay size: 100000\n",
+      "target network update: 16\n",
+      "optimizer: Adam (\n",
+      "Parameter Group 0\n",
+      "    amsgrad: False\n",
+      "    betas: (0.9, 0.999)\n",
+      "    eps: 1e-08\n",
+      "    initial_lr: 0.0001\n",
+      "    lr: 0.0001\n",
+      "    weight_decay: 0\n",
+      ")\n",
+      "Prefetch completed. Training starts!                         \n",
+      "Episode: 100\tAvg Score: 0.13\tsteps: 129900  eps: 0.90  lr: 1.00e-04\tp: 0.5  b: 1.00  td: : 10438.59\n",
+      "Episode: 200\tAvg Score: 0.35\tsteps: 159900  eps: 0.82  lr: 1.00e-04\tp: 0.5  b: 1.00  td: : 10321.63\n",
+      "Episode: 300\tAvg Score: 0.83\tsteps: 189900  eps: 0.74  lr: 1.00e-04\tp: 0.5  b: 1.00  td: : 12049.71\n",
+      "Episode: 400\tAvg Score: 1.86\tsteps: 219900  eps: 0.67  lr: 1.00e-04\tp: 0.5  b: 1.00  td: : 14741.40\n",
+      "Episode: 500\tAvg Score: 2.22\tsteps: 249900  eps: 0.61  lr: 1.00e-04\tp: 0.5  b: 1.00  td: : 17363.40\n",
+      "Episode: 600\tAvg Score: 2.80\tsteps: 279900  eps: 0.55  lr: 1.00e-04\tp: 0.5  b: 1.00  td: : 19342.73\n",
+      "Episode: 700\tAvg Score: 4.42\tsteps: 309900  eps: 0.50  lr: 1.00e-04\tp: 0.5  b: 1.00  td: : 20698.46\n",
+      "Episode: 708\tAvg Score: 4.42"
      ]
     }
    ],
@@ -396,17 +425,19 @@
     "            scores_window.append(score)       # save most recent score\n",
     "            scores.append(score)              # save most recent score\n",
     "            eps = max(eps_end, eps_decay*eps) # decay epsilon\n",
-    "            print('\\rEpisode: {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
+    "            print('\\rEpisode: {}\\tAvg Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
     "            if i_episode % 100 == 0:\n",
     "                \n",
     "                latest_lr = agent_unity.optimizer.state_dict()['param_groups'][0]['lr']\n",
+    "                td_s = agent_unity.memory.tree.total_td_score\n",
     "\n",
-    "                #print('\\rEpisode: {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
-    "                print(('\\rEpisode: {}\\tAverage Score: {:.2f}\\tsteps: {}   eps: {:.2f}'\n",
-    "                       '\\tlr: {:1.2e}\\tp: {:.3f}  b: {:.3f}').format(i_episode, np.mean(scores_window),\n",
+    "                #print('\\rrEpisode: {}\\tAvg Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
+    "                print(('\\rEpisode: {}\\tAvg Score: {:.2f}\\tsteps: {}  eps: {:.2f}  lr: {:1.2e}'\n",
+    "                       '\\tp: {:.1f}  b: {:.2f}  td: : {:.2f}').format(i_episode, np.mean(scores_window),\n",
     "                                                                     agent_unity.t_step, eps, latest_lr, \n",
     "                                                                     agent_unity.p_replay_alpha, \n",
-    "                                                                     agent_unity.p_replay_beta, end=\"\"))\n",
+    "                                                                     agent_unity.p_replay_beta,\n",
+    "                                                                     td_s, end=\"\"))\n",
     "                \n",
     "                torch.save(state_dicts, model_dir+model_name)\n",
     "\n",
