--- a/Unity ML Agent - Bananas Collector Navigation.ipynb
+++ b/Unity ML Agent - Bananas Collector Navigation.ipynb
@@ -310,12 +310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_dir = 'saved_models/'\n",
-    "model_name = 'unity_linear_navigation_local.pt'\n",
+    "model_name = 'unity_linear_navigation_local_play.pt'\n",
     "\n",
     "state_dicts = {'model': agent_unity.qnetwork_local.state_dict(), \n",
     "               'optimizer': agent_unity.optimizer.state_dict()}"
@@ -323,54 +323,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training to be started... Steps: 99900 current device: cpu\n",
-      "use duel network (a and v): False\n",
-      "use double network: False\n",
-      "use reward scaling: False\n",
-      "use error clipping: False\n",
-      "buffer size: 100000\n",
-      "batch size: 64\n",
-      "initial learning rate: 0.0001\n",
-      "learing rate decay: True\n",
-      "min replay size: 100000\n",
-      "target network update: 16\n",
-      "optimizer: Adam (\n",
-      "Parameter Group 0\n",
-      "    amsgrad: False\n",
-      "    betas: (0.9, 0.999)\n",
-      "    eps: 1e-08\n",
-      "    initial_lr: 0.0001\n",
-      "    lr: 0.0001\n",
-      "    weight_decay: 0\n",
-      ")\n",
-      "Prefetch completed. Training starts!                         \n",
-      "Episode: 100\tAvg Score: 0.39\tsteps: 129900  eps: 0.74  lr: 1.00e-04\tp:0.6   b:1.00   td:6878.73\n",
-      "Episode: 200\tAvg Score: 0.93\tsteps: 159900  eps: 0.55  lr: 1.00e-04\tp:0.6   b:1.00   td:6859.82\n",
-      "Episode: 300\tAvg Score: 2.23\tsteps: 189900  eps: 0.41  lr: 1.00e-04\tp:0.6   b:1.00   td:7953.60\n",
-      "Episode: 400\tAvg Score: 3.44\tsteps: 219900  eps: 0.30  lr: 1.00e-04\tp:0.6   b:1.00   td:9427.23\n",
-      "Episode: 500\tAvg Score: 5.98\tsteps: 249900  eps: 0.22  lr: 1.00e-04\tp:0.6   b:1.00   td:10964.43\n",
-      "Episode: 600\tAvg Score: 7.83\tsteps: 279900  eps: 0.16  lr: 1.00e-04\tp:0.6   b:1.00   td:11929.97\n",
-      "Episode: 700\tAvg Score: 8.33\tsteps: 309900  eps: 0.12  lr: 1.00e-04\tp:0.6   b:1.00   td:12910.33\n",
-      "Episode: 800\tAvg Score: 10.19\tsteps: 339900  eps: 0.10  lr: 1.00e-04\tp:0.6   b:1.00   td:13868.71\n",
-      "Episode: 900\tAvg Score: 11.63\tsteps: 369900  eps: 0.10  lr: 9.97e-05\tp:0.6   b:1.00   td:14948.86\n",
-      "Episode: 1000\tAvg Score: 12.61\tsteps: 399900  eps: 0.10  lr: 9.91e-05\tp:0.6   b:1.00   td:16220.80\n",
-      "Episode: 1100\tAvg Score: 12.83\tsteps: 429900  eps: 0.10  lr: 9.85e-05\tp:0.6   b:1.00   td:16987.38\n",
-      "Problem solved in 1009 episodes!\tAverage Score: 13.11\n"
+      "Training to be started... Steps: 3900 "
      ]
     }
    ],
    "source": [
-    "# after training, save your model parameters in the dir 'saved_models'\n",
-    "\n",
-    "\n",
-    "\n",
     "def dqn_unity(n_episodes=1000, max_t=1000, eps_start=1.0, eps_end=0.1):\n",
     "    \"\"\"Deep Q-Learning.\n",
     "    \n",
@@ -431,13 +395,14 @@
     "                                                                     td_s, end=\"\"))\n",
     "                \n",
     "                torch.save(state_dicts, model_dir+model_name)\n",
-    "\n",
+    "            \"\"\"\n",
     "            if np.mean(scores_window)>=13.0:\n",
     "                print('\\rProblem solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100,\n",
     "                                                                                        np.mean(scores_window)))\n",
     "\n",
     "                torch.save(state_dicts, model_dir+model_name)\n",
     "                break\n",
+    "            \"\"\"    \n",
     "\n",
     "            i_episode += 1\n",
     "        else:\n",
@@ -445,7 +410,7 @@
     "\n",
     "    return scores\n",
     "\n",
-    "scores = dqn_unity(2000)"
+    "scores = dqn_unity(5000)"
    ]
   },
   {
