added double network this time and it seems working well

--- a/Unity ML Agent - Bananas Collector Navigation.ipynb
+++ b/Unity ML Agent - Bananas Collector Navigation.ipynb
@@ -32,7 +32,7 @@
     "from unityagents import UnityEnvironment\n",
     "\n",
     "#from dqn_agent_ans import Agent\n",
-    "from dqn_agent_unity_PReplay_Tree import Agent\n",
+    "from dev_dqn_agent_unity_PReplay_Tree import Agent\n",
     "#from dqn_agent_unity_PReplay import Agent\n",
     "#from dqn_agent_unity_prioritized_updateTD_weight import Agent"
    ]
@@ -272,7 +272,7 @@
      "text": [
       "current device: cpu\n",
       "use duel network (a and v): False\n",
-      "use double network: False\n",
+      "use double network: True\n",
       "use reward scaling: False\n",
       "use error clipping: False\n",
       "buffer size: 100000\n",
@@ -310,12 +310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_dir = 'saved_models/'\n",
-    "model_name = 'unity_linear_navigation_local_play.pt'\n",
+    "model_name = 'unity_linear_navigation_local.pt'\n",
     "\n",
     "state_dicts = {'model': agent_unity.qnetwork_local.state_dict(), \n",
     "               'optimizer': agent_unity.optimizer.state_dict()}"
@@ -330,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training to be started... Steps: 29700 "
+      "Training to be started... Steps: 7200 "
      ]
     }
    ],
@@ -395,14 +395,14 @@
     "                                                                     td_s, end=\"\"))\n",
     "                \n",
     "                torch.save(state_dicts, model_dir+model_name)\n",
-    "            \"\"\"\n",
+    "            \n",
     "            if np.mean(scores_window)>=13.0:\n",
     "                print('\\rProblem solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100,\n",
     "                                                                                        np.mean(scores_window)))\n",
     "\n",
     "                torch.save(state_dicts, model_dir+model_name)\n",
     "                break\n",
-    "            \"\"\"    \n",
+    "               \n",
     "\n",
     "            i_episode += 1\n",
     "        else:\n",
@@ -410,7 +410,7 @@
     "\n",
     "    return scores\n",
     "\n",
-    "scores = dqn_unity(5000)"
+    "scores = dqn_unity(10000)"
    ]
   },
   {
@@ -459,14 +459,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 19.0\n"
+      "odict_keys(['fc1.weight', 'fc1.bias', 'fc2.weight', 'fc2.bias', 'fc3a.weight', 'fc3a.bias', 'fc4a.weight', 'fc4a.bias', 'fc3v.weight', 'fc3v.bias', 'fc4v.weight', 'fc4v.bias', 'fc3.weight', 'fc3.bias'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tate_dicts = torch.load(model_dir+model_name)\n",
+    "print(state_dicts['model'].keys())\n",
+    "\n",
+    "agent_unity.qnetwork_local.load_state_dict(state_dicts['model'])\n",
+    "agent_unity.optimizer.load_state_dict(state_dicts['optimizer'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "-7.810494422912598\n",
+      "-10.51666259765625\n",
+      "-11.65855598449707\n",
+      "-12.140389442443848\n",
+      "-12.343703269958496\n",
+      "-12.429492950439453\n",
+      "-12.465692520141602\n",
+      "-12.480966567993164\n",
+      "-12.487411499023438\n",
+      "-11.021040916442871\n",
+      "-11.020807266235352\n",
+      "-11.021233558654785\n",
+      "-11.021415710449219\n",
+      "-11.021491050720215\n",
+      "-11.021524429321289\n",
+      "-11.021537780761719\n",
+      "-11.021543502807617\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-11.021546363830566\n",
+      "-5.958666801452637\n",
+      "-2.3911678791046143\n",
+      "-1.096090316772461\n",
+      "-0.7521945238113403\n",
+      "-0.6882244944572449\n",
+      "-0.6767719984054565\n",
+      "-0.6748111248016357\n",
+      "-0.6745260953903198\n",
+      "-0.6744869947433472\n",
+      "-0.6744824051856995\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "-0.6744819283485413\n",
+      "Score: 0.0\n"
      ]
     }
    ],
