tried different params.

--- a/Unity ML Agent - Bananas Collector Navigation.ipynb
+++ b/Unity ML Agent - Bananas Collector Navigation.ipynb
@@ -340,18 +340,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/samuelpun_old/anaconda/envs/tensorflow/lib/python3.5/site-packages/numpy/core/_methods.py:140: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
-      "  keepdims=keepdims)\n",
-      "/Users/samuelpun_old/anaconda/envs/tensorflow/lib/python3.5/site-packages/numpy/core/_methods.py:110: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  arrmean, rcount, out=arrmean, casting='unsafe', subok=False)\n",
-      "/Users/samuelpun_old/anaconda/envs/tensorflow/lib/python3.5/site-packages/numpy/core/_methods.py:132: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -376,9 +364,21 @@
       "    weight_decay: 0\n",
       ")\n",
       "Prefetch completed. Training starts!                         \n",
-      "Episode: 100\tAvg Score: 0.27\tsteps: 129900  eps: 0.74  lr: 1.00e-04\tp:0.6   b:0.44   td:8804.51\n",
-      "Episode: 200\tAvg Score: 1.49\tsteps: 159900  eps: 0.55  lr: 1.00e-04\tp:0.6   b:0.49   td:10509.78\n",
-      "Episode: 299\tAvg Score: 3.42"
+      "Episode: 100\tAvg Score: 0.43\tsteps: 129900  eps: 0.74  lr: 1.00e-04\tp:0.5   b:0.54   td:12362.07\n",
+      "Episode: 200\tAvg Score: 2.13\tsteps: 159900  eps: 0.55  lr: 1.00e-04\tp:0.5   b:0.59   td:15579.77\n",
+      "Episode: 300\tAvg Score: 4.63\tsteps: 189900  eps: 0.41  lr: 1.00e-04\tp:0.5   b:0.63   td:19201.20\n",
+      "Episode: 400\tAvg Score: 6.55\tsteps: 219900  eps: 0.30  lr: 1.00e-04\tp:0.5   b:0.68   td:20516.63\n",
+      "Episode: 500\tAvg Score: 8.58\tsteps: 249900  eps: 0.22  lr: 1.00e-04\tp:0.5   b:0.72   td:21193.91\n",
+      "Episode: 600\tAvg Score: 10.12\tsteps: 279900  eps: 0.16  lr: 1.00e-04\tp:0.5   b:0.77   td:21805.21\n",
+      "Episode: 700\tAvg Score: 11.78\tsteps: 309900  eps: 0.12  lr: 1.00e-04\tp:0.5   b:0.81   td:22349.51\n",
+      "Episode: 800\tAvg Score: 11.87\tsteps: 339900  eps: 0.10  lr: 1.00e-04\tp:0.5   b:0.86   td:22845.61\n",
+      "Episode: 900\tAvg Score: 13.07\tsteps: 369900  eps: 0.10  lr: 1.00e-04\tp:0.5   b:0.90   td:23345.53\n",
+      "Episode: 1000\tAvg Score: 13.08\tsteps: 399900  eps: 0.10  lr: 1.00e-04\tp:0.5   b:0.95   td:23411.59\n",
+      "Episode: 1100\tAvg Score: 13.29\tsteps: 429900  eps: 0.10  lr: 9.75e-05\tp:0.5   b:0.99   td:23902.21\n",
+      "Episode: 1200\tAvg Score: 13.55\tsteps: 459900  eps: 0.10  lr: 9.46e-05\tp:0.5   b:1.00   td:24094.09\n",
+      "Episode: 1300\tAvg Score: 13.84\tsteps: 489900  eps: 0.10  lr: 9.18e-05\tp:0.5   b:1.00   td:24216.62\n",
+      "Episode: 1400\tAvg Score: 13.04\tsteps: 519900  eps: 0.10  lr: 8.91e-05\tp:0.5   b:1.00   td:24324.71\n",
+      "Episode: 1490\tAvg Score: 13.43"
      ]
     }
    ],
@@ -458,7 +458,7 @@
     "\n",
     "    return scores\n",
     "\n",
-    "scores = dqn_unity(2000)"
+    "scores = dqn_unity(1500)"
    ]
   },
   {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,317 +496,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "2\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "1\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "1\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "1\n",
-      "1\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "1\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "1\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "Score: 14.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
     "state = env_info.vector_observations[0]            # get the current state\n",
@@ -816,7 +508,8 @@
     "    env_info = env.step(action)[brain_name]        # send the action to the environment\n",
     "    next_state = env_info.vector_observations[0]   # get the next state\n",
     "    reward = env_info.rewards[0]                   # get the reward\n",
-    "    print(action)\n",
+    "    if np.sum(state[[0,5,11,17,23,29,25]]) == 0:\n",
+    "        print(\"no banana!\")\n",
     "    done = env_info.local_done[0]                  # see if episode has finished\n",
     "    score += reward                                # update the score\n",
     "    state = next_state                             # roll over the state to next time step\n",
@@ -828,9 +521,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2203375697135925"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
